[WIP] feat(Expense): Buttons to process expense

--- a/lang/en.json
+++ b/lang/en.json
@@ -42,6 +42,7 @@
   "actions.done": "Done",
   "actions.download": "Download",
   "actions.follow": "Follow",
+  "actions.pay": "Pay",
   "actions.processing": "Processing",
   "actions.reject": "Reject",
   "actions.rejectExpense.processing": "Rejecting expense",
@@ -712,6 +713,7 @@
   "expense.paid": "paid",
   "expense.pay.btn": "Pay with {paymentMethod}",
   "expense.pay.error.insufficientBalance": "Insufficient balance",
+  "expense.pay.error.noHost": "Expenses cannot be payed without a host",
   "expense.pay.manual.btn": "Record as paid",
   "expense.pay.paypal.success": "Expense was paid using PayPal, the money should already be avaialable for the payee.",
   "expense.pay.transferwise.planlimit": "You reached your plan's limit, <Link>upgrade your plan</Link> to continue paying expense with TransferWise",
