--- a/lang/es.json
+++ b/lang/es.json
@@ -42,6 +42,7 @@
   "actions.done": "Hecho",
   "actions.download": "Descargar",
   "actions.follow": "Seguir",
+  "actions.pay": "Pay",
   "actions.processing": "Procesando",
   "actions.reject": "Rechazar",
   "actions.rejectExpense.processing": "Rechazando gasto",
@@ -712,6 +713,7 @@
   "expense.paid": "pagado",
   "expense.pay.btn": "Pagar con {paymentMethod}",
   "expense.pay.error.insufficientBalance": "Saldo insuficiente",
+  "expense.pay.error.noHost": "Expenses cannot be payed without a host",
   "expense.pay.manual.btn": "Record as paid",
   "expense.pay.paypal.success": "Expense was paid using PayPal, the money should already be avaialable for the payee.",
   "expense.pay.transferwise.planlimit": "You reached your plan's limit, <Link>upgrade your plan</Link> to continue paying expense with TransferWise",
