--- a/lang/fr.json
+++ b/lang/fr.json
@@ -42,6 +42,7 @@
   "actions.done": "Fait",
   "actions.download": "Télécharger",
   "actions.follow": "S’abonner",
+  "actions.pay": "Pay",
   "actions.processing": "Traitement en cours",
   "actions.reject": "Rejeter",
   "actions.rejectExpense.processing": "Rejet de la dépense en cours",
@@ -712,6 +713,7 @@
   "expense.paid": "payé",
   "expense.pay.btn": "Payer avec {paymentMethod}",
   "expense.pay.error.insufficientBalance": "Solde insuffisant",
+  "expense.pay.error.noHost": "Expenses cannot be payed without a host",
   "expense.pay.manual.btn": "Marquer comme payé",
   "expense.pay.paypal.success": "La dépense a été payée avec PayPal, l'argent devrait déjà être disponible pour le bénéficiaire.",
   "expense.pay.transferwise.planlimit": "You reached your plan's limit, <Link>upgrade your plan</Link> to continue paying expense with TransferWise",
