--- a/lang/it.json
+++ b/lang/it.json
@@ -42,6 +42,7 @@
   "actions.done": "Completato",
   "actions.download": "Scarica",
   "actions.follow": "Segui",
+  "actions.pay": "Pay",
   "actions.processing": "In elaborazione",
   "actions.reject": "Rifiuta",
   "actions.rejectExpense.processing": "Rifiuta spesa",
@@ -712,6 +713,7 @@
   "expense.paid": "pagato",
   "expense.pay.btn": "Pay with {paymentMethod}",
   "expense.pay.error.insufficientBalance": "Credito insufficiente",
+  "expense.pay.error.noHost": "Expenses cannot be payed without a host",
   "expense.pay.manual.btn": "Record as paid",
   "expense.pay.paypal.success": "Expense was paid using PayPal, the money should already be avaialable for the payee.",
   "expense.pay.transferwise.planlimit": "You reached your plan's limit, <Link>upgrade your plan</Link> to continue paying expense with TransferWise",
