--- a/lang/ja.json
+++ b/lang/ja.json
@@ -42,6 +42,7 @@
   "actions.done": "完了",
   "actions.download": "ダウンロード",
   "actions.follow": "フォロー",
+  "actions.pay": "Pay",
   "actions.processing": "処理中",
   "actions.reject": "リジェクト",
   "actions.rejectExpense.processing": "請求を拒否",
@@ -712,6 +713,7 @@
   "expense.paid": "支払い済み",
   "expense.pay.btn": "Pay with {paymentMethod}",
   "expense.pay.error.insufficientBalance": "残高不足",
+  "expense.pay.error.noHost": "Expenses cannot be payed without a host",
   "expense.pay.manual.btn": "Record as paid",
   "expense.pay.paypal.success": "Expense was paid using PayPal, the money should already be avaialable for the payee.",
   "expense.pay.transferwise.planlimit": "You reached your plan's limit, <Link>upgrade your plan</Link> to continue paying expense with TransferWise",
