--- a/lang/pt.json
+++ b/lang/pt.json
@@ -42,6 +42,7 @@
   "actions.done": "Concluído",
   "actions.download": "Baixar",
   "actions.follow": "Seguir",
+  "actions.pay": "Pay",
   "actions.processing": "Processando",
   "actions.reject": "Rejeitar",
   "actions.rejectExpense.processing": "Rejeitando despesa",
@@ -712,6 +713,7 @@
   "expense.paid": "pago",
   "expense.pay.btn": "Pague com {paymentMethod}",
   "expense.pay.error.insufficientBalance": "Saldo insuficiente",
+  "expense.pay.error.noHost": "Expenses cannot be payed without a host",
   "expense.pay.manual.btn": "Marcar como pago",
   "expense.pay.paypal.success": "Esta despesa foi paga usando PayPal, o dinheiro já deve estar disponível para o beneficiário.",
   "expense.pay.transferwise.planlimit": "You reached your plan's limit, <Link>upgrade your plan</Link> to continue paying expense with TransferWise",
