--- a/lang/zh.json
+++ b/lang/zh.json
@@ -42,6 +42,7 @@
   "actions.done": "完成",
   "actions.download": "下载",
   "actions.follow": "关注",
+  "actions.pay": "Pay",
   "actions.processing": "处理中……",
   "actions.reject": "拒绝",
   "actions.rejectExpense.processing": "拒绝费用",
@@ -712,6 +713,7 @@
   "expense.paid": "paid",
   "expense.pay.btn": "Pay with {paymentMethod}",
   "expense.pay.error.insufficientBalance": "Insufficient balance",
+  "expense.pay.error.noHost": "Expenses cannot be payed without a host",
   "expense.pay.manual.btn": "Record as paid",
   "expense.pay.paypal.success": "Expense was paid using PayPal, the money should already be avaialable for the payee.",
   "expense.pay.transferwise.planlimit": "You reached your plan's limit, <Link>upgrade your plan</Link> to continue paying expense with TransferWise",
