--- a/lang/ru.json
+++ b/lang/ru.json
@@ -42,6 +42,7 @@
   "actions.done": "Готово",
   "actions.download": "Загрузить",
   "actions.follow": "Подписаться",
+  "actions.pay": "Pay",
   "actions.processing": "Обрабатываем",
   "actions.reject": "Отклонить",
   "actions.rejectExpense.processing": "Отвержение расхода",
@@ -712,6 +713,7 @@
   "expense.paid": "оплачено",
   "expense.pay.btn": "Pay with {paymentMethod}",
   "expense.pay.error.insufficientBalance": "Недостаточный остаток",
+  "expense.pay.error.noHost": "Expenses cannot be payed without a host",
   "expense.pay.manual.btn": "Record as paid",
   "expense.pay.paypal.success": "Expense was paid using PayPal, the money should already be avaialable for the payee.",
   "expense.pay.transferwise.planlimit": "You reached your plan's limit, <Link>upgrade your plan</Link> to continue paying expense with TransferWise",
